tests/compile-fail/intrinsics/simd-div-by-zero.stderr
error: Undefined Behavior: dividing by zero
  --> $DIR/simd-div-by-zero.rs:14:5
   |
LL |     simd_div(x, y); //~ERROR Undefined Behavior: dividing by zero
   |     ^^^^^^^^^^^^^^ dividing by zero
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/simd-div-by-zero.rs:14:5

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

